--- a/FixIt/app/src/main/AndroidManifest.xml
+++ b/FixIt/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fixit">
 
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -15,8 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FixIt">
         <activity
-            android:name=".PreviewActivity"
+            android:name=".CreateConcernActivity"
             android:exported="false" />
+        <activity
+            android:name=".PreviewActivity"
+            android:exported="false"/>
         <activity
             android:name=".ProfileActivity"
             android:exported="false" />
