--- a/FixIt/app/build.gradle
+++ b/FixIt/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.camera:camera-core:1.0.0'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.3.0'
 
     testImplementation 'junit:junit:4.13.2'
 
