--- a/FixIt/app/src/main/AndroidManifest.xml
+++ b/FixIt/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             android:exported="false" />
         <activity
             android:name=".SignInActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".SignUpActivity"
             android:exported="true">
